# CARSBench

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: baselines.md  dataset_format.md  domains.md  index.md  qc_results.md  reproducibility.md
examples/: 01_basic_simulation.py  02_domain_presets.py  03_save_and_load.py  04_plotting.py
qc/: README.md  general_qc_clean_intensity.csv  general_qc_raman_target.csv  general_qc_spectrum.csv  specific_domain_qc.csv
results/: README.md
results/benchmark/: baseline_results.csv
scripts/: 00_smoke_test.py  01_generate_all_seeds.py  01_generate_full_dataset.py  02_qa_simulation.py  03_paper_figures.py  04_boxplot.py  05_categorical_bar.py  06_validate_spectra.py  07_validate_chemistry_GH.py  08_general_domain_qc.py  09_specific_domain_qc.py  11_make_readme_figures.py  12_run_baseline_benchmark.py
src/CARSBench/: __init__.py  api.py  output.py
src/CARSBench/benchmark/: __init__.py  baselines.py  metrics.py  protocol.py  protocols.py  reports.py  runners.py
src/CARSBench/config/: __init__.py  axis.py  dists.py  domains.py  enums.py  instrument.py  io.py  noise.py  nrb.py  resolve.py  resonant.py  spatial.py
src/CARSBench/configs/: __init__.py  defaults.py  enums.py  loader.py  resolver.py  schemas.py
src/CARSBench/core/: batch.py  forward.py  simulate.py  utils.py
src/CARSBench/datasets/: __init__.py  batch.py  reader.py  schema.py  simulate.py  splits.py  writer.py
src/CARSBench/domains/: __init__.py  base.py  presets.py  registry.py  samplers.py
src/CARSBench/instrument/: __init__.py  axis.py  baseline.py  calibration.py  detector.py  envelope.py  noise.py  psf.py
src/CARSBench/io/: __init__.py  reader.py  writer.py
src/CARSBench/models/: __init__.py  targets.py
src/CARSBench/physics/: __init__.py  components.py  forward_frequency.py  forward_time.py  lineshapes.py  nrb.py  resonant.py  targets.py
src/CARSBench/spatial/: __init__.py  abundance.py  cubes.py  mixing.py  patch_sampling.py  textures.py
src/CARSBench/tasks/: __init__.py  normalization.py  retrieval.py  targets.py  transforms.py
src/CARSBench/utils/: __init__.py  distributions.py  random.py  typing.py
src/CARSBench/viz/: __init__.py  benchmark.py  domains.py  figures.py  plots.py  spectra.py  validation.py
tests/: test_api.py  test_domain_generation.py  test_domain_presets.py  test_domains.py  test_io.py  test_metrics.py  test_reproducibility.py  test_save_npz.py  test_simulate_shapes.py
