[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CARSBench"
version = "0.1.0"
description = "A BCARS Simulation and Generalization Benchmark: BCARS/CARS simulator with complex resonant + NRB susceptibilities, instrument variability, and domain presets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
hdf5 = ["h5py>=3.8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]