[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CARSBench"
version = "0.1.0"
description = "A BCARS/CARS simulation and domain-generalization benchmark for Raman-retrieval models."
readme = "README.md"
requires-python = ">=3.9.5"
license = { text = "MIT" }
authors = [
  { name = "Rola Houhou" }
]
keywords = [
  "CARS",
  "BCARS",
  "Raman",
  "spectroscopy",
  "simulation",
  "benchmark",
  "machine-learning",
  "domain-generalization",
  "synthetic-data",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.6",
  "black>=24.0",
]

analysis = [
  "pandas>=2.0",
  "seaborn>=0.13",
  "tqdm>=4.66",
]

notebooks = [
  "jupyter>=1.0",
  "ipykernel>=6.0",
]

[project.urls]
Homepage = "https://github.com/rhouhou/CARSBench"
Repository = "https://github.com/rhouhou/CARSBench"
Issues = "https://github.com/rhouhou/CARSBench/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]